--- a/Pages/AdminMenuPage.xaml
+++ b/Pages/AdminMenuPage.xaml
@@ -6,9 +6,12 @@
       xmlns:local="clr-namespace:Library.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminMenuPage">
+      Title="Меню администратора">
     <!--Background="#FFBA977B"-->
     <Grid>
+        <TextBlock HorizontalAlignment="Right" Margin="5">
+<Hyperlink Name="HelpBtn" Foreground="Black" Click="HelpBtn_Click">Справка</Hyperlink>
+        </TextBlock>
         <StackPanel  HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button x:Name="IssuanceAndReturnBookBtn" Click="IssuanceAndReturnBookBtn_Click">Выдача и возврат книг</Button>
             <Button x:Name="BookListBtn" Click="BookListBtn_Click">Книги в библиотеки</Button>
