--- a/Pages/AdminMenuPage.xaml
+++ b/Pages/AdminMenuPage.xaml
@@ -16,7 +16,8 @@
             <Button x:Name="IssuanceAndReturnBookBtn" Click="IssuanceAndReturnBookBtn_Click">Выдача и возврат книг</Button>
             <Button x:Name="BookListBtn" Click="BookListBtn_Click">Книги в библиотеки</Button>
             <Button x:Name="ReadersListBtn" Click="ReadersListBtn_Click">Читатели</Button>
-            <Button x:Name="ArchiveBtn" Click="ArchiveBtn_Click">Архив выданных книг</Button>
+            <Button x:Name="ArchiveBtn" Click="ArchiveBtn_Click">Архив возвращенных книг</Button>
+            <Button x:Name="ArchiveBookBtn" Click="ArchiveBookBtn_Click">Архив книг</Button>
 
         </StackPanel>
     </Grid>
