--- a/Pages/AdminHelpPage.xaml
+++ b/Pages/AdminHelpPage.xaml
@@ -12,7 +12,7 @@
         <ScrollViewer>
             <StackPanel>
                 <TextBlock TextWrapping="Wrap">По нажатию кнопки Выход в правом верхнем углу, происходит выход из учетной записи и переход на окно авторизации</TextBlock>
-                <TextBlock TextWrapping="Wrap" Margin="5 35 0 0" >По нажатию кнопки Выдача и возврат в меню администратора, открывается список взятых книг читателями.</TextBlock>
+                <TextBlock TextWrapping="Wrap" Margin="5 35 0 0" >По нажатию кнопки Выдача и возврат в меню администратора, открывается список выданных книг читателями.</TextBlock>
                 <TextBlock TextWrapping="Wrap">Если срок возврата просрочен, запись выделяется красной рамкой, внизу записи выводится красный текст Возврат проcрочен.</TextBlock>
                 <TextBlock TextWrapping="Wrap">Возможен поиск по наименованию книги, ФИО читателя и читательского номера.</TextBlock>
                 <TextBlock TextWrapping="Wrap">По нажатию кнопки Продлить на записи открывается окно с информацией данной записи, где возможно изменить дату возврата</TextBlock>
@@ -24,9 +24,19 @@
                 <TextBlock TextWrapping="Wrap">Если свободных копий нет, книга выводится серым цветом, внизу записи выводится красный текст Все копии на руках.</TextBlock>
                 <TextBlock TextWrapping="Wrap">Возможно осуществить выборку книг по наименованию и по ФИО автора, а также выполнить фильтрацию по жанру.</TextBlock>
                 <TextBlock TextWrapping="Wrap">По нажатию кнопки Добавит/Изменить/Удалить выполняется соответсвующая операция.</TextBlock>
+                
                 <TextBlock TextWrapping="Wrap" Margin="5 35 0 0">По нажатию кнопки Читатели в меню администратора, открывается окно со списком всех читателей.</TextBlock>
                 <TextBlock TextWrapping="Wrap">Возможно осуществить поиск по ФИО или читательскому номеру.</TextBlock>
                 <TextBlock TextWrapping="Wrap">По нажатию кнопки Добавит/Изменить/Удалить выполняется соответсвующая операция.</TextBlock>
+                <TextBlock Margin="5 35 0 0" TextWrapping="Wrap">По нажатию кнопки  в меню администратора, открывается окно со списком всех книг в библиотеке.</TextBlock>
+
+                <TextBlock Margin="5 35 0 0" TextWrapping="Wrap">По нажатию кнопки Архив возвращенных книг в меню администратора, открывается окно со списком всех книг, которые вернули в библиотеку.</TextBlock>
+                <TextBlock TextWrapping="Wrap">Можно осущетсвить поск по наименованию кинги, ФИО читателя и читательского номера.</TextBlock>
+
+                <TextBlock Margin="5 35 0 0" TextWrapping="Wrap">По нажатию кнопки Архив книг в меню администратора, открывается окно со списком всех удаленных копий книг.</TextBlock>
+                <TextBlock TextWrapping="Wrap">Можно осущетсвить поиск по наименованию кинги, автору и выполнить фильтрацию по жанру.</TextBlock>
+                <TextBlock TextWrapping="Wrap">По нажатию кнопки Экспорт в Excel, на рабочем столе формируется файл с данными архивированных кинг.</TextBlock>
+
             </StackPanel>
         </ScrollViewer>
       
