--- a/Pages/BookListPage.xaml
+++ b/Pages/BookListPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Library.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Список книг">
+      Title="Список книг" Loaded="Page_Loaded">
 
     <Grid >
         <Grid.RowDefinitions>
