--- a/Pages/AdminHelpPage.xaml
+++ b/Pages/AdminHelpPage.xaml
@@ -17,7 +17,7 @@
                 <TextBlock TextWrapping="Wrap">Возможен поиск по наименованию книги, ФИО читателя и читательского номера.</TextBlock>
                 <TextBlock TextWrapping="Wrap">По нажатию кнопки Продлить на записи открывается окно с информацией данной записи, где возможно изменить дату возврата</TextBlock>
                 <TextBlock TextWrapping="Wrap">По нажатию кнопки Возврат происходит возврат кинги в библеотеку</TextBlock>
-                <TextBlock TextWrapping="Wrap">По нажатию кнопки Выдать книгу, октрывается окно выдачи книги, где необходимо заполнить необходимую информацию, дата выдачи устанавливается автоматически текущей датой, а дата возвата высчитывается +30 дней к текущей дате.</TextBlock>
+                <TextBlock TextWrapping="Wrap">По нажатию кнопки Выдать книгу, октрывается окно выдачи книги, где необходимо заполнить необходимую информацию, дата выдачи устанавливается автоматически текущей датой, а дата возврата высчитывается +30 дней к текущей дате.</TextBlock>
 
 
                 <TextBlock Margin="5 35 0 0" TextWrapping="Wrap">По нажатию кнопки Книги в меню администратора, открывается окно со списком всех книг в библиотеке.</TextBlock>
